[metadata]
name = lucuiec-recon
version = 3.0.0
author = Oussamahassania
description = Ultimate Web Hacking Recon Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Oussamahassania/Lucuiec-Recon
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    httpx>=0.25.0
    requests>=2.31.0
    dnspython>=2.4.0
    colorama>=0.4.6
    python-nmap>=0.7.1

[options.entry_points]
console_scripts =
    lucuiec-recon = lucuiec_recon.main:main

[options.package_data]
lucuiec_recon =
    wordlists/*.txt